# coworker

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  public-surface.yml  release.yml
coworker/: __init__.py  cli.py  config.py  logger.py  pricing.py  profiles.py  providers.py  stats.py
coworker/plugins/: __init__.py  rtk.py  rtk_codex_shims.py  rtk_cursor_hook.py  rtk_passthrough.py  rtk_signal_guard.sh
dev-tools/: measure-invocation-token-cost.sh  public-surface-forbidden.regex
docs/: claude-code-integration.md  configuration.md  installation.md  logging-privacy.md  provider-setup.md  release-verification.md  rtk-plugin.md  troubleshooting.md
docs/release-audit/: release-0.7.0.md
examples/: profiles.yaml.example  providers.yaml.example
scripts/: bench_rtk.py
tests/: test_balance_error.py  test_bench_rtk.py  test_cli_smoke.py  test_file_gate.py  test_measure_invocation_token_cost.py  test_pricing.py  test_provider_routing.py  test_public_surface_hygiene.py  test_release_workflow.py  test_rtk_codex_shims.py  test_rtk_cursor_hook.py  test_rtk_live.py  test_rtk_passthrough.py  test_rtk_plugin.py  test_stats_export.py  test_version_metadata.py  test_write_append.py
